--- a/azure.html
+++ b/azure.html
@@ -38,7 +38,7 @@
   <div class="container poppins my-5">
     <h1>Microsoft Certification in AI & Cloud Technologies</h1>
     <h2></h2>
-    <img src="images/azure_cert.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <img src="images/azure_cert.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; " class="img-fluid max-size">
     <p style="text-align: justify;">I achieved certification from Microsoft, deepening my expertise in artificial intelligence and cloud technologies. This rigorous training covered a broad spectrum of advanced topics, including:</p>
       <ul style="text-align: justify;margin-bottom:10px;">
         <li>
