--- a/flutter.html
+++ b/flutter.html
@@ -38,7 +38,7 @@
   <div class="container poppins my-5">
     <h1>Flutter & Dart Development</h1>
     <h2></h2>
-    <img src="images/ch-5.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <img src="images/Ch-5.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; " class="img-fluid max-size">
     <p style="text-align: justify;">As part of my programming journey, I delved into mobile app development using Flutter and Dart. Flutter, a powerful framework for building natively compiled applications for iOS and Android from a single codebase, allowed me to develop sophisticated and high-performance mobile applications.</p>
     <p style="text-align: justify;">One of my key projects was the development of a School App, designed to streamline communication and manage various aspects of school operations. This project involved crafting a user-friendly interface and implementing features tailored to the needs of students, teachers, and administrators. I had the opportunity to demonstrate this app to the school principal, showcasing its potential to enhance the school's efficiency and user experience.</p>
     <p style="margin-bottom: 203px;text-align: justify;">This experience with Flutter and Dart not only expanded my technical skills but also provided me with valuable insights into real-world application development and stakeholder engagement.</p>
