--- a/gd.html
+++ b/gd.html
@@ -41,7 +41,7 @@
   <div class="container poppins my-5">
     <h1>Game Development Experience with Roblox</h1>
     <h2></h2>
-    <img src="images/roblox.png" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <img src="images/roblox.png" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; " class="img-fluid max-size">
     <p style="text-align: justify;">Roblox offers a unique approach to game development with its Lua scripting language and a platform that allows immediate sharing and community feedback. This combination of scripting, creative design, and social engagement has been instrumental in my growth as a game developer.</p>
     <p style="text-align: justify;">Key Skills Acquired:</p>
     <li>
