--- a/html.html
+++ b/html.html
@@ -41,7 +41,7 @@
   <div class="container poppins my-5">
     <h1>Web Development Fundamentals</h1>
     <h2></h2>
-    <img src="images/Ch-6.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <img src="images/Ch-6.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; " class="img-fluid max-size">
     <p style="text-align: justify;">I have acquired a strong foundation in web development, mastering the core principles and technologies that drive modern websites. My training covered essential topics including:</p>
     <ul style="text-align: justify;margin-bottom:10px;">
       <li>
