--- a/scratch.html
+++ b/scratch.html
@@ -37,7 +37,7 @@
   </nav>
   <div class="container poppins my-5">
     <h1>Scratch Programming Achievement</h1>
-    <img src="images/Ch-4.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <img src="images/Ch-4.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; " class="img-fluid max-size">
     <p style="text-align: justify;">I began my coding journey with Scratch, earning a certification for my ability to create interactive stories, games, and animations. This foundational experience not only honed my problem-solving skills but also ignited my passion for programming. Building on the skills gained from Scratch, I have since explored and mastered additional programming languages and technologies, further advancing my expertise.</p>
     <!-- <div class="circular-progress"></div> -->
     <p style="text-align: justify;">Key Features</p>
