--- a/tf.html
+++ b/tf.html
@@ -38,7 +38,7 @@
   <div class="container poppins my-5">
     <h1>TensorFlow & Advanced AI Expertise</h1>
     <h2></h2>
-    <img src="images/Ch-2.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <img src="images/Ch-2.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px;" class="img-fluid max-size">
     <p style="text-align: justify;">I further advanced my technical skills by completing the TensorFlow by Google certification, focusing on artificial intelligence, machine learning, and deep learning. This comprehensive training equipped me with a deep understanding of TensorFlow, one of the most powerful tools for building and deploying machine learning models.</p>
     <p style="text-align: justify;">Through this certification, I gained expertise in designing, training, and evaluating complex neural networks, as well as implementing state-of-the-art algorithms to solve real-world problems. My training covered a wide range of topics, including deep learning architectures, model optimization, and deployment strategies, all crucial for developing cutting-edge AI solutions.</p>
     <p style="margin-bottom: 203px;text-align: justify;">Achieving this certification not only validated my skills in AI and machine learning but also enhanced my capability to tackle sophisticated projects and contribute effectively to the field of artificial intelligence.</p>
