--- a/unity.html
+++ b/unity.html
@@ -38,7 +38,7 @@
   <div class="container poppins my-5">
     <h1>Game Development Experience with Unity</h1>
     <h2></h2>
-    <img src="images/Ch-7.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; height: 25rem;">
+    <img src="images/Ch-7.jpg" alt="alt" style="float:right;margin-bottom:30px; margin-left:40px; " class="img-fluid max-size">
     <p style="text-align: justify;">After learning several programming languages, I discovered a passion for game development, which led me to explore popular platforms like Unity and Roblox. Over time, I have honed my skills and developed multiple games on both platforms, each with unique challenges and learning experiences. Below is a glimpse of my journey and accomplishments in game development.</p>
     <p style="text-align: justify;">Unity Game Development</p>
     <p style="text-align: justify;">Unity has been one of my primary platforms for game development, known for its powerful engine, extensive asset store, and flexibility. I leveraged Unity's capabilities to bring my game ideas to life, focusing on gameplay mechanics, 3D modeling, and immersive environments.</p>
